// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sasas 1`] = `
<nav
  className="bottomMarginNav flexRow flexCenter whiteBackGround"
/>
`;

exports[`shoud renderd darkBackground 1`] = `
<nav
  className="bottomMarginNav flexRow flexCenter darkBackGround"
/>
`;
